added apiRoot, clean up knexfile
